src/objects/Integration_Mapping__c.object
<CustomObject>
    <description>Cross-reference lookups for Informatica integration.  This custom object allows Informatica to do lookups for various different fields.</description>
    <fields>
        <fullName>Attribute_1__c</fullName>
        <label>Attribute 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_2__c</fullName>
        <label>Attribute 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Name__c</fullName>
        <label>Lookup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Type__c</fullName>
        <label>Lookup Type</label>
        <picklist>
            <picklistValues>
                <fullName>Country Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mapping_Name__c</fullName>
        <label>Mapping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lookup_Type__c</columns>
        <columns>Lookup_Name__c</columns>
        <columns>Mapping_Name__c</columns>
        <columns>Attribute_1__c</columns>
        <columns>Attribute_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Integration Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>